--- a/electronApp/style.css
+++ b/electronApp/style.css
@@ -80,9 +80,41 @@ h1 {
 
 }
 
-
+.h5 {
+    float: bottom;
+    /* display: flex; */
+    /* margin: auto; */
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    position: relative;
+    bottom: 0;
+}
 
 .h5 a {
     text-decoration: none;
     color: white;
+
+}
+
+.messageBox {
+    overflow: hidden;
+    white-space: nowrap;
+    margin: 0 auto;
+    letter-spacing: 0.20em;
+    animation:
+        typing 7.5s steps(40, end),
+        blink-caret .55s step-end infinite;
+}
+
+@keyframes typing {
+    from { width: 0}
+    to { width: 100% }
+
+}
+
+@keyframes blink-caret {
+    from, to { border-color: transparent }
+    50% {border-color: yellow; }
 }
