--- a/electronApp/style.css
+++ b/electronApp/style.css
@@ -95,6 +95,11 @@ h1 {
 .h5 a {
     text-decoration: none;
     color: white;
+}
+
+.h5 a:hover {
+    color: blueviolet;
+    font-size: 13px;
 
 }
 
